--- a/contactus.html
+++ b/contactus.html
@@ -19,6 +19,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Uchen&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"  />
     <title> DAMAR - Contáctanos</title>
 </head>
 <body>
@@ -28,7 +29,7 @@
                 <a class="logo" href="index.html">DAMAR</a>
             </div>
             <ul class="listadoNavegacion">
-               <li><a class="navegacion" href="aboutus.html"> Nosotros</a></li> 
+               
                 <li><a class="navegacion" href="marcas.html"> Marcas</a>
                 <ul class="subMenu">
                     <li class="listaSubMenu"><a class="links" href="https://portaltramites.inpi.gob.ar/marcasconsultas/busqueda">INPI</a></li>
@@ -37,13 +38,13 @@
                 </li>
                 <li><a class="navegacion" href="patentes.html"> Patentes</a></li>
                 <li><a class="navegacion" href="modelosydiseños.html"> Modelos y diseños</a></li>
-                <li><a class="navegacion" href="diseñoweb.html"> Diseño web</a></li>
+                <li><a class="navegacion" href="contactus.html"> Contactanos</a></li>
 
             </ul>  
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container parrafos">
         <h1 class="logo">Contáctanos</h1>
         <div class="infoForm">
             <div class="contacForm">
