--- a/patentes.html
+++ b/patentes.html
@@ -27,7 +27,7 @@
                 <a class="logo" href="index.html">DAMAR</a>
             </div>
             <ul class="listadoNavegacion">
-               <li><a class="navegacion" href="aboutus.html"> Nosotros</a></li> 
+               
                 <li><a class="navegacion" href="marcas.html"> Marcas</a>
                 <ul class="subMenu">
                     <li class="listaSubMenu"><a class="links" href="https://portaltramites.inpi.gob.ar/marcasconsultas/busqueda">INPI</a></li>
@@ -36,7 +36,7 @@
                 </li>
                 <li><a class="navegacion" href="patentes.html"> Patentes</a></li>
                 <li><a class="navegacion" href="modelosydiseños.html"> Modelos y diseños</a></li>
-                <li><a class="navegacion" href="diseñoweb.html"> Diseño de páginas web</a></li>
+                <li><a class="navegacion" href="contactus.html"> Contactanos</a></li>
 
             </ul>  
         </nav>
