contactus, cuadro, unificacion de criterios

--- a/marcas.html
+++ b/marcas.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Marcas: te ayudamos a proteger tu marca, la identidad de tu emprendimiento.">
-    <meta name="keywords" content="marca,patente,modelo,diseño,industrial,asesoramiento legal,aseosramiento, propiedad industrial, PI, ">
+    <meta name="description" content="Asesoramiento integral y personalizado sobre PI y diseño web.">
+    <meta name="keywords" content="marca,patente,modelo,diseño,industrial,diseño web,legal,aseosramiento">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Latest compiled and minified CSS -->
+   <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
 <!-- Optional theme -->
@@ -14,10 +14,12 @@
 
 <!-- Latest compiled and minified JavaScript -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="/styles/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Uchen&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     <title> DAMAR - Marcas</title>
 </head>
 <body>
@@ -42,8 +44,8 @@
         </nav>
     </header>
     <main>
-        <div class="encabezados">
-            <h1>MARCAS.</h2>
+        <div class="content">
+            <h1>MARCAS.</h1>
         </div>
         
        <div class="info">
