--- a/modelosydiseños.html
+++ b/modelosydiseños.html
@@ -90,12 +90,12 @@
        </div>          
     </main>
     <footer>
-        <div>
-            <p class="parrafos"> 2021/ Consultoria Damar. Todos los derechos  reservados</p>
-            <div class="imgFooter">
-                <a href="https://www.facebook.com/"><img class="logoFooter" src="/imagenes/iconos/facebook.svg" alt=""></a>
-                <a href="https://twitter.com/?lang=es"><img class="logoFooter" src="/imagenes/iconos/twitter.svg" alt=""></a>
-            </div>
+        <div class="textFooter">
+            <p> 2021/ Consultoria Damar. Todos los derechos  reservados</p>
+        </div>
+        <div class="imgFooter">
+                <a href="https://www.facebook.com/"><img src="/imagenes/iconos/facebook.svg" alt=""></a>
+                <a href="https://twitter.com/?lang=es"><img src="/imagenes/iconos/twitter.svg" alt=""></i></a>
         </div>
     </footer>
     <script src="/js/bootstrap.min.js"></script>
