--- a/contactus.html
+++ b/contactus.html
@@ -45,7 +45,7 @@
     </header>
     <main>
     <div class="container parrafos">
-        <h1 class="logo">Contáctanos</h1>
+        <h2 class="tit">Contáctanos</h2>
         <div class="formulario1">
             <div class="datos">
                 <h3>Contáctanos</h3>
@@ -93,15 +93,44 @@
             </div>
         </div>
     </div>
+    <div class="maps">
+            <h2 class="tit">Vení a visitarnos</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6960.290170087152!2d-58.43074229576693!3d-34.58343279341552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb58e48859fc5%3A0x99a4f96784284b50!2sAv.%20Juan%20B.%20Justo%201234%2C%20C1414CWO%20CABA!5e0!3m2!1ses-419!2sar!4v1630168034093!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+       
+
     </main>
     <footer>
-        <div class="textFooter">
-            <p> 2021/ Consultoria Damar. Todos los derechos  reservados</p>
+        <div class="containerFooter">
+            <div class="boxFooter">
+                <div class="logo">
+                    <img src="/imagenes/logo.svg" alt="">
+                </div>
+                <div class="terms">
+                    <p>DAMAR es una consultoría jurídica en materia de derechos de propiedad intelectual. El contenido de la presente página no puede ser entendida como asesoramiento legal.</p>
+                </div>
+            </div>
+            <div class="boxFooter">
+                <h2>DAMAR</h2>
+                <a href="contactus.html">Contact Us</a>
+                <a href="patentes.html">Patentes</a>
+                <a href="marcas.html">Marcas</a>
+                <a href="modelosydiseños.html">Modelos y diseños industriales</a>
+            </div>
+            <div class="boxFooter">
+                <h2>Redes sociales</h2>
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i> Facebook</a>
+                <a href="https://ar.linkedin.com/"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                <a href="https://twitter.com/"><i class="fab fa-twitter"></i> Twitter</a>
+                <a href="https://www.instagram.com/?hl=es"><i class="fab fa-instagram"></i> Instagram</a>
+            </div>
         </div>
-        <div class="imgFooter">
-                <a href="https://www.facebook.com/"><img src="/imagenes/iconos/facebook.svg" alt=""></a>
-                <a href="https://twitter.com/?lang=es"><img src="/imagenes/iconos/twitter.svg" alt=""></i></a>
-        </div>
+            <div class="boxCopyRight">
+                <p> Todos los derechos reservados - 2021
+                    <b> DAMAR</b>
+                </p>
+
+            </div>
     </footer>
     <script src="/js/bootstrap.min.js"></script>
 </body>
