--- a/index.html
+++ b/index.html
@@ -30,17 +30,25 @@
                 <a class="logo" href="index.html">DAMAR</a>
             </div>
             <ul class="listadoNavegacion">
-                <li><a class="navegacion" href="marcas.html"> Marcas</a>
-                <ul class="subMenu">
-                    <li class="listaSubMenu"><a class="links" href="https://portaltramites.inpi.gob.ar/marcasconsultas/busqueda">INPI</a></li>
-                    <li class="listaSubMenu"><a class="links" href="https://portaltramites.inpi.gob.ar/Marcas/Instructivos">INSTRUCTIVO</a></li>
-                </ul>
-                </li>
+                <li><a class="navegacion" href="marcas.html"> Marcas</a></li>
                 <li><a class="navegacion" href="patentes.html"> Patentes</a></li>
                 <li><a class="navegacion" href="modelosydiseños.html"> Modelos y diseños</a></li>
                 <li><a class="navegacion" href="contactus.html"> Contactanos</a></li>
-
-            </ul>  
+            </ul>
+            <div class="menu_responsive">
+                <ul class="nav_responsive_ul">
+                    <div class="nav_responsive-button-container">
+                        <div class="nav_responsive-button fas fa-bars"></div>
+                    </div>
+                    <div class="nav_li-container">
+                        <li class="nav_responsive_li"><a href="marcas.html"> Marcas</a></li>                        </li>
+                        <li class="nav_responsive_li"><a  href="patentes.html"> Patentes</a></li>
+                        <li class="nav_responsive_li"><a  href="modelosydiseños.html"> Modelos y diseños</a></li>
+                        <li class="nav_responsive_li"><a  href="contactus.html"> Contactanos</a></li>
+                    </div>               
+                </ul>
+            </div>  
+              
         </nav>
     </header>
     
