--- a/index.html
+++ b/index.html
@@ -6,14 +6,8 @@
     <meta name="description" content="Asesoramiento integral y personalizado sobre PI y diseño web.">
     <meta name="keywords" content="marca,patente,modelo,diseño,industrial,diseño web,legal,aseosramiento">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-
-<!-- Optional theme -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/global.css">
@@ -27,6 +21,7 @@
     <header class="container-fluid"> 
         <nav>
             <div>
+                <img class="logo2" src="imagenes/logo2.svg" href="index.html" alt="">
                 <a class="logo" href="index.html">DAMAR</a>
             </div>
             <ul class="listadoNavegacion">
@@ -60,7 +55,7 @@
             </div>        
          </div>
          <div class="frase2">
-           <p>
+           <p class="animate__animated animate__fadeInDown">
             Nos encargamos de proteger tu creatividad. Te damos todas herramientas para que cuides lo tuyo.
            </p> 
         </div>
@@ -83,11 +78,7 @@
                 <a href="modelosydiseños.html"><img class="logoCajas" src="/imagenes/iconos/modelos.svg" alt=""></a>
                 <p class="parrafos"> Los modelos y diseños industriales se utilizan para proteger la forma estetica y/u ornamental de tus productos.</p>
             </div>
-            <div class="cajas">
-                <h2>Diseño web</h2>
-                <a href="diseñoweb.html"><img class="logoCajas" src="/imagenes/iconos/diseno-web.svg" alt=""></a>
-                <p class="parrafos">Las páginas web son utilizadas por toda persona que pretenda acercar sus productos o servicios al mundo. Son la ventana al mundo.</p>
-            </div>
+            
         </div>
         <div class="tit">
             <h2> NUESTROS CLIENTES</h2>
@@ -95,19 +86,19 @@
         
         <div class="gridClients">
                 <figure title="Facebook">
-                    <img src="imagenes/Clients/Facebook.jpg" alt="Facebook">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/1365px-Facebook_f_logo_%282019%29.svg.png" alt="Facebook">
                 </figure>
-                <figure title="Rolex">
-                    <img src="imagenes/Clients/rolexx.png" alt="Rolex">
+                <figure title="harley-davidson-">
+                    <img src="imagenes/Clients/harley-davidson-11.svg" alt="harley-davidson-">
                 </figure>
-                <figure title="Accenture">
-                    <img src="imagenes/Clients/accenture.png" alt="Accenture">
+                <figure title="Ferrari">
+                    <img src="imagenes/Clients/scuderia-ferrari-logo.svg" alt="Ferrari">
                 </figure>
-                <figure title="Zara">
-                    <img src="imagenes/Clients/zara.jpg" alt="Zara">
+                <figure title="Coca-Cola">
+                    <img src="imagenes/Clients/coca-cola.svg" alt="Coca-Cola">
                 </figure>
                 <figure title="Nike">
-                    <img src="imagenes/Clients/nike..jpg" alt="Nike">
+                    <img src="imagenes/Clients/nike.svg" alt="Nike">
                 </figure>
                 <figure title="Aerolineas Argentinas">
                     <img src="imagenes/Clients/AA.png" alt="Aerolineas Argentinas">
@@ -128,7 +119,7 @@
             </div>
             <div class="boxFooter">
                 <h2>DAMAR</h2>
-                <a href="contactus.html">Contact Us</a>
+                <a href="contactus.html">Contáctanos</a>
                 <a href="patentes.html">Patentes</a>
                 <a href="marcas.html">Marcas</a>
                 <a href="modelosydiseños.html">Modelos y diseños industriales</a>
@@ -148,6 +139,7 @@
 
             </div>
     </footer>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
