--- a/marcas.html
+++ b/marcas.html
@@ -6,14 +6,8 @@
     <meta name="description" content="Asesoramiento integral y personalizado sobre PI y diseño web.">
     <meta name="keywords" content="marca,patente,modelo,diseño,industrial,diseño web,legal,aseosramiento">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-
-<!-- Optional theme -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="/styles/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,7 +37,7 @@
                         <div class="nav_responsive-button fas fa-bars"></div>
                     </div>
                     <div class="nav_li-container">
-                        <li class="nav_responsive_li"><a href="marcas.html"> Marcas</a></li>                        </li>
+                        <li class="nav_responsive_li"><a href="marcas.html"> Marcas</a></li></li>
                         <li class="nav_responsive_li"><a  href="patentes.html"> Patentes</a></li>
                         <li class="nav_responsive_li"><a  href="modelosydiseños.html"> Modelos y diseños</a></li>
                         <li class="nav_responsive_li"><a  href="contactus.html"> Contactanos</a></li>
@@ -56,7 +50,11 @@
         <div class="content">
             <h1>MARCAS.</h1>
         </div>
-       
+        <div class="frase3">
+            <p class="animate__animated animate__fadeInDown">
+             Dale identidad a tu producto. Dejá una marca en el mundo. Nosotros nos encargamos de cuidarla.
+            </p> 
+         </div>
        <div class="info">
            <div class="definicion">
             <h2 class="animate__animated animate__backInLeft">¿Qué protegen las marcas?</h2>
@@ -107,7 +105,7 @@
             </div>
             <div class="boxFooter">
                 <h2>DAMAR</h2>
-                <a href="contactus.html">Contact Us</a>
+                <a href="contactus.html">Contáctanos</a>
                 <a href="patentes.html">Patentes</a>
                 <a href="marcas.html">Marcas</a>
                 <a href="modelosydiseños.html">Modelos y diseños industriales</a>
@@ -127,6 +125,7 @@
 
             </div>
     </footer>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
