--- a/contactus.html
+++ b/contactus.html
@@ -6,14 +6,8 @@
     <meta name="description" content="Asesoramiento integral y personalizado sobre PI y diseño web.">
     <meta name="keywords" content="marca,patente,modelo,diseño,industrial,diseño web,legal,aseosramiento">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-
-<!-- Optional theme -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="/styles/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -118,7 +112,7 @@
             </div>
             <div class="boxFooter">
                 <h2>DAMAR</h2>
-                <a href="contactus.html">Contact Us</a>
+                <a href="contactus.html">Contáctanos</a>
                 <a href="patentes.html">Patentes</a>
                 <a href="marcas.html">Marcas</a>
                 <a href="modelosydiseños.html">Modelos y diseños industriales</a>
@@ -138,6 +132,7 @@
 
             </div>
     </footer>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
