--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Uchen&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title> DAMAR - Agencia de consultoria integral sobre derechos de propiedad industrial y diseño web</title>
 </head>
 <body>
@@ -65,17 +65,17 @@
         <div class="padreInicio">
             <div class="cajas">
                 <h2>Marcas</h2>
-                <a href="marcas.html"><img class="logoCajas" src="/imagenes/iconos/marca.svg" alt=""></a>
+                <a href="marcas.html"><img class="logoCajas" src="imagenes/iconos/marca.svg" alt=""></a>
                 <p class="parrafos"> Las marcas nos ayudan a proteger el logo que identifica nuestro producto o servicio de los demas.</p>
             </div>
             <div class="cajas">
                 <h2>Patentes</h2>
-                <a href="patentes.html"><img class="logoCajas" src="/imagenes/iconos/patentes.svg" alt=""></a>
+                <a href="patentes.html"><img class="logoCajas" src="imagenes/iconos/patentes.svg" alt=""></a>
                 <p class="parrafos">Las patentes se utilizan para proteger las invenciones y evitar que cualquier persona pueda usarla sin tu consentimiento.</p>
              </div>
             <div class="cajas">
                 <h2> Modelos y diseños</h2>
-                <a href="modelosydiseños.html"><img class="logoCajas" src="/imagenes/iconos/modelos.svg" alt=""></a>
+                <a href="modelosydiseños.html"><img class="logoCajas" src="imagenes/iconos/modelos.svg" alt=""></a>
                 <p class="parrafos"> Los modelos y diseños industriales se utilizan para proteger la forma estetica y/u ornamental de tus productos.</p>
             </div>
             
@@ -111,7 +111,7 @@
         <div class="containerFooter">
             <div class="boxFooter">
                 <div class="logo">
-                    <img src="/imagenes/logo.svg" alt="">
+                    <img src="imagenes/logo.svg" alt="">
                 </div>
                 <div class="terms">
                     <p>DAMAR es una consultoría jurídica en materia de derechos de propiedad intelectual. El contenido de la presente página no puede ser entendida como asesoramiento legal.</p>
