--- a/modelosydiseños.html
+++ b/modelosydiseños.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="styles/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Uchen&display=swap" rel="stylesheet"> 
@@ -97,7 +97,7 @@
         <div class="containerFooter">
             <div class="boxFooter">
                 <div class="logo">
-                    <img src="/imagenes/logo.svg" alt="">
+                    <img src="imagenes/logo.svg" alt="">
                 </div>
                 <div class="terms">
                     <p>DAMAR es una consultoría jurídica en materia de derechos de propiedad intelectual. El contenido de la presente página no puede ser entendida como asesoramiento legal.</p>
